Updated store name

--- a/src/main/resources/templates/view/home.html
+++ b/src/main/resources/templates/view/home.html
@@ -9,7 +9,7 @@
  <h1>Welcome to |Gadget Beast| ...</h1>
  <img th:src="@{/images/wallpaper.png}" height="200px" width="200px"/>
 
- <a th:href="@{/design}" id="design">Design a taco</a>
+ <a th:href="@{/design}" id="design">Design a Gadget</a>
  </body>
 </html>
 
