Ch 03 with test

--- a/src/main/resources/templates/view/design.html
+++ b/src/main/resources/templates/view/design.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <title>Design Beast</title>
-  <link rel="stylesheet" th:href="@{/styles.css}" />
+  <link rel="stylesheet" th:href="@{style/styles.css}" />
 </head>
 <body>
 <h1>Design your Gadget!</h1>
