--- a/src/main/resources/templates/view/orderForm.html
+++ b/src/main/resources/templates/view/orderForm.html
@@ -4,7 +4,7 @@
 
 <head>
     <title>Gadget Beast</title>
-    <link rel="stylesheet" th:href="@{/styles.css}" />
+    <link rel="stylesheet" th:href="@{style/styles.css}" />
 </head>
 
 <body>
