--- a/src/main/resources/templates/view/orderForm.html
+++ b/src/main/resources/templates/view/orderForm.html
@@ -24,7 +24,7 @@
 <!--        </li>-->
 
 <!--    </ul>-->
-    <h3>Deliver my taco masterpieces to...</h3>
+    <h3>Deliver my Gadget to...</h3>
     <label for="deliveryName">Name: </label>
     <input type="text" th:field="*{deliveryName}"/>
     <span class="validationError"
